--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/index.php": {
-      "runtime": "vercel-php@latest"
+      "runtime": "now-php@1.0.0"
     }
   },
   "routes": [
