--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "functions": {
-    "api/index.php": {
-      "runtime": "now-php@1.0.0"
+  "builds": [
+    {
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.php" }
   ]
 }
